# growtopia-stealer

./: Cargo.toml  README.md
src/: main.rs
